--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+	Copyright 2014 Git.training
+-->
 <head>
 	<title>Simple Title2</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
