--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-	Copyright 2014 Git.training.....
+	Copyright 2014 Git.tradfdfining.....
 -->
 <head>
 	<title>Simple Title2</title>
